--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -24,5 +24,5 @@ mac:
 nsis:
   oneClick: false
   allowToChangeInstallationDirectory: true
-  installerIcon: "installer-icon.ico"
-  uninstallerIcon: "installer-icon.ico"
+  installerIcon: "icon.ico"
+  uninstallerIcon: "icon.ico"
