--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "socket.io-client": "^3.0.5",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "discord-rpc": "^3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -28,6 +29,7 @@
     "@emotion/css": "^11.1.3",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@types/discord-rpc": "^3.0.4",
     "@types/node": "14.14.19",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
