--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "tunein-app",
-  "version": "1.0.4",
-  "description": "An app to sync spotify playing between people",
-  "scripts": {
-    "postinstall": "electron-builder install-app-deps",
-    "dev": "electron-webpack dev",
-    "build": "electron-webpack",
-    "builder": "yarn build && electron-builder"
-  },
-  "author": "Mathew Stead <matthew.stead@matievisthekat.dev>",
-  "license": "GPL-3.0",
+  "name": "cra",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
-    "electron-store": "^6.0.1",
-    "electron-updater": "^4.3.5",
-    "electron-window-state": "^5.0.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "socket.io-client": "^3.0.5",
-    "source-map-support": "^0.5.19",
-    "discord-rpc": "^3.1.4"
+    "react-scripts": "4.0.1",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
   },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@emotion/css": "^11.1.3",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@types/discord-rpc": "^3.0.4",
-    "@types/node": "14.14.19",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "electron": "^11.1.1",
-    "electron-builder": "^22.9.1",
-    "electron-webpack": "^2.8.2",
-    "electron-webpack-ts": "^4.0.1",
-    "typescript": "^4.1.3",
-    "webpack": "4.42.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
