--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tunein-site",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://matievisthekat.github.io/tunein-app",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@types/node": "^12.0.0",
@@ -13,10 +13,15 @@
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "license": "MIT"
 }
