--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "gh-pages": "^3.1.0"
   },
   "scripts": {
